cabal-version:      2.4
name:               composable-services
version:            0.1.0.0

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

executable composable-services
  main-is:          Main.hs
  build-depends:    base
                  , free
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2
